added section to run with Maven